-Junior-Frontend-Developer
Html страничка

--- a/HR Junior Frontend Developer.html
+++ b/HR Junior Frontend Developer.html
@@ -19,7 +19,7 @@
                     <div style="display: inline-block;"><img src="photo_2018-11-12_13-52-52.jpg" alt="Фото"
                         width="120" height="120"></div>
                     <div style="display: inline-block;vertical-align: top"><p>Имя: Погонщикова Виктория</p>
-                       <p><a href="https://html5book.ru/examples/html-tags.html">Ссылка на репозиторий в GitHub</a></p>
+                       <p><a href="https://github.com/ViktoriaHello/-Junior-Frontend-Developer/tree/master">Ссылка на репозиторий в GitHub</a></p>
                         <p>Опыт работы: нет</p></div>
                   </div>
                   <p>Дата собеседования:
